test/visibility/rename/innerOnly2.good
innerOnly2.chpl:13: In function 'main':
innerOnly2.chpl:14: error: 'bar' undeclared (first use this function)
